--- a/resume_builder/resume-stylesheet.css
+++ b/resume_builder/resume-stylesheet.css
@@ -535,7 +535,7 @@ h3 {
 h4 {
     font-size: 16px;
     color: #333;
-    text-align: center;
+    text-align: left;
     -webkit-margin-before: 0.02em;
     -webkit-margin-after: 0.02em;
 }
